# hscode-django

./: .:w.swp  db.sqlite3  pyproject.toml
config/: .settings.py.swj  .settings.py.swl  .settings.py.swm  .settings.py.swn  .settings.py.swp  settings.py
config/__pycache__/: settings.cpython-310.pyc.139747128380464
user/: admin.py  models.py
user/migrations/: 0001_initial.py
