[tool.poetry]
name = "hscode-django"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"
packages = [{include = "hscode_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
